--- a/LocationAPI/package.json
+++ b/LocationAPI/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "geoloc-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./index.js",
-    "dev": "nodemon ./index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "circular-json": "^0.5.9",
-    "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "fs": "^0.0.1-security",
-    "node-cron": "^3.0.0",
-    "nodemon": "^2.0.15",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.16.5"
-  }
+    "scripts": {
+        "start": "node service.js",
+        "dev": "npx nodemon service.js"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "node-fetch": "^2.6.1",
+        "nodemon": "^2.0.16",
+        "request": "^2.88.0",
+        "uuid": "^8.3.2"
+    }
 }
